# papermate

./: .gitignore  README.md  article.py  interface.py  papermate.py  pyproject.toml  setup.py
examples/: example_config.toml
papermate/: __init__.py  articles.py  interface.py  queries.py  utils.py
papermate/interface/: __init__.py  controller.py  interface.py
papermate/scripts/: base.py  config.py  daily.py  notify.py
tests/: test_config.ini
