[project]
name = "papermate"
version = "1.1.0"
description = "Daily ADS feed of arXiv papers"
authors = [
    {name = "Nolan Dickson", email = "ndickson@protonmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "ads>=0.12.4",
    'tomli; python_version < "3.11"'
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
repository = "https://github.com/nmdickson/papermate.git"

[project.scripts]
papermate = "papermate.scripts:base.main"
papermate-daily = "papermate.scripts:base.daily"
papermate-library = "papermate.scripts:base.library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
